Fix pagination when searching in resource page
  - Add pagination in search result models
  - Workaround while backend doesn't provide real total in search results: when there is a search:
     - we display total count of resources if there is more than one page or if the current page is not the first one.
     - We display a total of 1 page otherwise
  - Use pastanaga buttons in pagination component

--- a/libs/common/src/lib/pagination/pagination.component.html
+++ b/libs/common/src/lib/pagination/pagination.component.html
@@ -1,21 +1,23 @@
-<div
-  class="pagination"
-  fxLayout="row"
-  fxLayoutAlign="center center"
-  fxLayoutGap="16px">
-  <button
+<div class="pagination">
+  <pa-button
+    size="small"
+    icon="chevron-left"
+    aspect="basic"
     [disabled]="_page <= 1"
     (click)="prev.emit()">
-    &lt;
-  </button>
+    {{ 'generic.previous' | translate }}
+  </pa-button>
   <div
     translate
     [translateParams]="{ current: _page, total: _total }">
     generic.pagination
   </div>
-  <button
+  <pa-button
+    size="small"
+    icon="chevron-right"
+    aspect="basic"
     [disabled]="_page >= _total"
-    (click)="next.emit()">
-    &gt;
-  </button>
+    (click)="prev.emit()">
+    {{ 'generic.next' | translate }}
+  </pa-button>
 </div>
