Fix resource list for resources without title [sc-3274]

--- a/libs/common/src/lib/pagination/pagination.component.html
+++ b/libs/common/src/lib/pagination/pagination.component.html
@@ -17,7 +17,7 @@
     icon="chevron-right"
     aspect="basic"
     [disabled]="_page >= _total"
-    (click)="prev.emit()">
+    (click)="next.emit()">
     {{ 'generic.next' | translate }}
   </pa-button>
 </div>
