--- a/libs/search-widget/src/common/indicators/PageIndicator.scss
+++ b/libs/search-widget/src/common/indicators/PageIndicator.scss
@@ -1,6 +1,9 @@
 @import 'indicator';
 
 .sw-page-indicator {
-  flex: 1 0 auto;
   min-width: var(--rhythm-3);
+
+  &:not(.stack) {
+    flex: 1 0 auto;
+  }
 }
