Fix video player size when summary is small [sc-3302]

--- a/libs/search-widget/src/tiles/_tile.scss
+++ b/libs/search-widget/src/tiles/_tile.scss
@@ -117,6 +117,9 @@
       header {
         gap: var(--rhythm-2);
       }
+      .thumbnail-container {
+        flex: 1;
+      }
       .side-panel {
         --find-input-height: var(--rhythm-4);
         --find-input-margin: var(--rhythm-1);
