New signup page layout

--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -18,6 +18,7 @@ $rhythm: (
   9: ($spacer * 9),       //  9    unit -  72px -  4.5   rem
   10: ($spacer * 10),     //  10   unit -  80px -  5     rem
   12: ($spacer * 12),     //  12   unit -  96px -  6     rem
+  13: ($spacer * 13),     //  13   unit - 104px -  6.5   rem
   14: ($spacer * 14),     //  14   unit - 112px -  7     rem
   16: ($spacer * 16),     //  16   unit - 128px -  8     rem
   20: ($spacer * 20),     //  20   unit - 160px - 10     rem
@@ -27,6 +28,7 @@ $rhythm: (
   32: ($spacer * 32),     //  32   unit - 256px - 16     rem
   35: ($spacer * 35),     //  35   unit - 280px - 17.5   rem
   40: ($spacer * 40),     //  40   unit - 320px - 20     rem
+  41: ($spacer * 41),     //  41   unit - 328px - 20.5   rem
   48: ($spacer * 48),     //  48   unit - 384px - 24     rem
   56: ($spacer * 56),     //  56   unit - 448px - 28     rem
   64: ($spacer * 64),     //  64   unit - 512px - 32     rem
