Update typography: use Inter (Google font)

--- a/apps/dashboard/src/app/account/account-home/account-home.component.scss
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.scss
@@ -89,6 +89,7 @@
     .total-queries {
       font-size: rhythm(5);
       font-weight: $font-weight-bold;
+      line-height: rhythm(7);
     }
   }
 
