--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-profile/knowledge-box-profile.component.html
@@ -7,12 +7,8 @@
     <form
       [formGroup]="kbForm"
       (ngSubmit)="saveKb()">
-      <div
-        class="mb-24"
-        fxLayout="row">
-        <label
-          class="kb-field-name mt-12"
-          fxFlex="30%">
+      <div>
+        <label class="title-s">
           {{ 'generic.uid' | translate }}
         </label>
         <div fxFlex="70%">
@@ -23,12 +19,8 @@
         </div>
       </div>
 
-      <div
-        class="mb-24"
-        fxLayout="row">
-        <label
-          class="kb-field-name mt-12"
-          fxFlex="30%">
+      <div>
+        <label class="title-s">
           {{ 'generic.slug' | translate }}
         </label>
         <div fxFlex="70%">
@@ -39,12 +31,8 @@
         </div>
       </div>
 
-      <div
-        class="mb-24"
-        fxLayout="row">
-        <label
-          class="kb-field-name mt-12"
-          fxFlex="30%">
+      <div>
+        <label class="title-s">
           {{ 'generic.name' | translate }}
         </label>
         <div fxFlex="70%">
@@ -55,10 +43,8 @@
         </div>
       </div>
 
-      <div fxLayout="row">
-        <label
-          class="kb-field-name mt-12"
-          fxFlex="30%">
+      <div>
+        <label class="title-s">
           {{ 'generic.description' | translate }}
         </label>
         <div fxFlex="70%">
@@ -69,10 +55,8 @@
         </div>
       </div>
 
-      <div
-        class="mt-40"
-        fxLayout="row">
-        <div fxFlex="30%"></div>
+      <footer>
+        <div></div>
         <div
           fxFlex="70%"
           fxLayout="row"
@@ -90,7 +74,7 @@
             {{ 'generic.cancel' | translate }}
           </pa-button>
         </div>
-      </div>
+      </footer>
     </form>
   </div>
 </div>
