--- a/apps/dashboard/src/app/resources/edit/profile/profile.component.html
+++ b/apps/dashboard/src/app/resources/edit/profile/profile.component.html
@@ -4,7 +4,7 @@
   (ngSubmit)="save()">
   <div>
     <label
-      class="title-xxs"
+      class="title-s"
       for="title">
       {{ 'resource.title' | translate }}
     </label>
@@ -13,15 +13,23 @@
       formControlName="title"></pa-input>
   </div>
   <div>
-    <label for="authors">{{ 'resource.authorship' | translate }}</label>
+    <label
+      class="title-s"
+      for="authors">
+      {{ 'resource.authorship' | translate }}
+    </label>
     <pa-input
       id="authors"
       formControlName="authors"></pa-input>
   </div>
   <div>
     <div>
-      <label for="summary">{{ 'resource.summary' | translate }}</label>
-      <div class="body-xs">{{ 'resource.summary.help' | translate }}</div>
+      <label
+        class="title-s"
+        for="summary">
+        {{ 'resource.summary' | translate }}
+      </label>
+      <div class="body-s">{{ 'resource.summary.help' | translate }}</div>
     </div>
     <pa-textarea
       id="summary"
@@ -30,8 +38,12 @@
   </div>
   <div>
     <div>
-      <label for="radio-group-resource-thumbnail">{{ 'resource.thumbnail' | translate }}</label>
-      <div class="body-xs">{{ 'resource.thumbnail.help' | translate }}</div>
+      <label
+        class="title-s"
+        for="radio-group-resource-thumbnail">
+        {{ 'resource.thumbnail' | translate }}
+      </label>
+      <div class="body-s">{{ 'resource.thumbnail.help' | translate }}</div>
     </div>
     <div class="thumbnails-container">
       <pa-radio-group
@@ -80,7 +92,7 @@
   </div>
 
   <div class="classification-container">
-    <label>{{ 'resource.classification' | translate }}</label>
+    <label class="title-s">{{ 'resource.classification' | translate }}</label>
     <div>
       <app-label-field
         [selection]="currentLabels"
@@ -115,7 +127,8 @@
  --data-raw '$$DATA$$'</code></pre>
   <a
     href="https://docs.nuclia.dev/docs/api#operation/Modify_Resource_kb__kbid__resource__rid__patch"
-    target="_new">
+    target="_new"
+    class="body-m">
     Learn more
   </a>
 </ncom-hint>
