--- a/libs/sistema/theme/tokens/_buttons.tokens.scss
+++ b/libs/sistema/theme/tokens/_buttons.tokens.scss
@@ -1,5 +1,6 @@
 @import './palette.tokens';
 @import '../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/spacing.tokens';
+@import '../../../pastanaga-angular/projects/pastanaga-angular/src/styles/theme/typography.tokens';
 
 //=====================================
 // BUTTONS
@@ -16,6 +17,8 @@ $padding-button-icon-text-large: rhythm(1) rhythm(2) rhythm(1) rhythm(1.5);
 
 $padding-button-icon-small: rhythm(1);
 $padding-button-icon-large: rhythm(1.5);
+
+$font-size-button-medium: font-size(s);
 
 // Shadows
 $shadow-button-solid-hover: none;
