Fix fonts in widget

--- a/libs/search-widget/src/common/_global.scss
+++ b/libs/search-widget/src/common/_global.scss
@@ -1,7 +1,7 @@
 mark {
   background-color: inherit;
   color: inherit;
-  font-weight: var(--font-weight-semi-bold);
+  font-weight: var(--font-weight-medium);
 }
 mark[family] {
   background-color: var(--color-neutral-lighter);
