--- a/libs/search-widget/src/common/indicators/_indicator.scss
+++ b/libs/search-widget/src/common/indicators/_indicator.scss
@@ -4,6 +4,7 @@
   border-radius: var(--rhythm-4);
   cursor: pointer;
   display: flex;
+  font-size: var(--font-size-medium);
   gap: var(--rhythm-0_25);
   line-height: var(--rhythm-3);
   max-width: var(--rhythm-9);
