--- a/libs/search-widget/src/common/paragraph-result/AllResultsToggle.scss
+++ b/libs/search-widget/src/common/paragraph-result/AllResultsToggle.scss
@@ -3,6 +3,7 @@
   color: var(--color-neutral-regular);
   cursor: pointer;
   display: flex;
+  font-size: var(--font-size-medium);
   font-weight: var(--font-weight-semi-bold);
   gap: var(--rhythm-1);
   line-height: var(--rhythm-3);
