Signup by email
  - New user-container component (for the new layout, the old one has been marked with `old` prefix)
  - Call signup endpoint with username, email and password
  - New check your email page
  - Use logo icons from sistema instead of Pastanaga

--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-home/knowledge-box-home.component.html
@@ -80,7 +80,7 @@
         class="container go-to-desktop"
         *ngIf="isDownloadDesktopEnabled | async">
         <img
-          src="assets/nuclia-desktop.svg"
+          src="assets/logos/nuclia-desktop.svg"
           alt="Nuclia Desktop" />
         <p>{{ 'stash.desktop.description' | translate }}</p>
         <div class="desktop-button">
