--- a/libs/common/src/lib/user/account/account.component.html
+++ b/libs/common/src/lib/user/account/account.component.html
@@ -1,4 +1,4 @@
-<stf-user-container
+<stf-old-user-container
   widthSm="530px"
   *ngIf="accounts.length > 0">
   <div
@@ -55,4 +55,4 @@
       </pa-button>
     </div>
   </div>
-</stf-user-container>
+</stf-old-user-container>
