--- a/libs/common/src/lib/user/recover/recover.component.html
+++ b/libs/common/src/lib/user/recover/recover.component.html
@@ -1,4 +1,4 @@
-<stf-user-container widthSm="520px">
+<stf-old-user-container widthSm="520px">
   <stf-user-container-logo>
     <div class="recover_title">
       <h1>{{ 'recover.title' | translate }}</h1>
@@ -45,4 +45,4 @@
       </a>
     </div>
   </stf-user-container-logo>
-</stf-user-container>
+</stf-old-user-container>
