--- a/libs/common/src/lib/user/signup/old-signup.component.html
+++ b/libs/common/src/lib/user/signup/old-signup.component.html
@@ -1,4 +1,4 @@
-<stf-user-container widthSm="520px">
+<stf-old-user-container widthSm="520px">
   <stf-user-container-logo>
     <div class="signup">
       <div class="signup_description">
@@ -77,4 +77,4 @@
       </div>
     </div>
   </stf-user-container-logo>
-</stf-user-container>
+</stf-old-user-container>
