--- a/apps/desktop/src/app/account/account.component.html
+++ b/apps/desktop/src/app/account/account.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <img src="assets/nuclia-desktop.svg" />
+  <img src="assets/logos/nuclia-desktop.svg" />
   <ul>
     <li
       *ngFor="let account of accounts | async"
