--- a/apps/desktop/src/app/login/login.component.html
+++ b/apps/desktop/src/app/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="splash">
   <div class="container">
     <img
-      src="assets/nuclia-desktop.svg"
+      src="assets/logos/nuclia-desktop.svg"
       alt="Nuclia desktop" />
     <p>{{ 'login.headline' | translate }}</p>
     <p>
