--- a/libs/common/src/lib/user/login/old-login.component.html
+++ b/libs/common/src/lib/user/login/old-login.component.html
@@ -1,4 +1,4 @@
-<stf-user-container
+<stf-old-user-container
   widthSm="520px"
   *ngIf="!error; else errorMessage">
   <stf-user-container-logo>
@@ -114,7 +114,7 @@
       </div>
     </div>
   </stf-user-container-logo>
-</stf-user-container>
+</stf-old-user-container>
 
 <ng-template #errorMessage>
   <stf-user-error
