--- a/libs/common/src/lib/user/reset/reset.component.html
+++ b/libs/common/src/lib/user/reset/reset.component.html
@@ -1,4 +1,4 @@
-<stf-user-container widthSm="520px">
+<stf-old-user-container widthSm="520px">
   <stf-user-container-logo>
     <div class="reset_title">
       <h1>{{ 'reset.title' | translate }}</h1>
@@ -56,4 +56,4 @@
       </form>
     </div>
   </stf-user-container-logo>
-</stf-user-container>
+</stf-old-user-container>
