--- a/libs/common/src/lib/user/user-error/user-error.component.html
+++ b/libs/common/src/lib/user/user-error/user-error.component.html
@@ -1,8 +1,8 @@
-<stf-user-container widthSm="520px">
+<stf-old-user-container widthSm="520px">
   <stf-user-container-logo>
     <div class="user-error">
       <div class="user-error-title">{{ 'login.error.oops' | translate }}</div>
       <div>{{ message | translate }}</div>
     </div>
   </stf-user-container-logo>
-</stf-user-container>
+</stf-old-user-container>
