--- a/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box/knowledge-box.component.scss
@@ -1,5 +1,8 @@
+@import 'variables';
+
 .upload-bar-container {
   position: sticky;
   top: var(--app-topbar-height);
   padding: 0 rhythm(6) 0 var(--app-sidebar-width);
+  z-index: $z-index-popup;
 }
