Fix inputs with external label in account and user profiles

--- a/apps/dashboard/src/app/account/account-manage/account-manage.component.html
+++ b/apps/dashboard/src/app/account/account-manage/account-manage.component.html
@@ -20,6 +20,7 @@
             <pa-input
               id="account-title"
               formControlName="title"
+              externalLabel
               [errorMessages]="validationMessages.title"></pa-input>
           </div>
         </div>
