--- a/libs/common/src/lib/user/profile/profile.component.html
+++ b/libs/common/src/lib/user/profile/profile.component.html
@@ -20,6 +20,7 @@
             formControlName="name"
             id="name"
             required
+            externalLabel
             [errorMessages]="profile_validation_messages.name"></pa-input>
         </div>
       </div>
